--- a/fas_app/package.json
+++ b/fas_app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/stack": "^6.3.17",
@@ -22,6 +23,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.0",
     "react-navigation": "^4.4.4"
   },
