--- a/fas_app/package.json
+++ b/fas_app/package.json
@@ -2,6 +2,7 @@
   "name": "fas_app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "proxy":"http://localhost:1082",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -23,7 +24,10 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
